# transitive_from

./: Cargo.toml  README.md
src/: lib.rs
