[package]
name = "transitive_from"
version = "0.1.0"
authors = ["Frank Steffahn <fdsteffahn@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """
Helper macros for creating hierarchies of transitive `From` implementations.
"""
repository = "https://github.com/steffahn/transitive_from"
homepage = "https://github.com/steffahn/transitive_from"
documentation = "https://docs.rs/transitive_from"
keywords = ["derive", "From"]
categories = ["rust-patterns", "no-std"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
